# fun-error

./: Cargo.toml  INSTALL_ARCH.md  PKGBUILD  README.md
.github/workflows/: release.yml
conf/: fun-error.bash  fun-error.fish  fun-error.zsh
src/: main.rs
